ecmascript/parser/tests/test262-error-references/fail/888d17b2ef3b2afc.js.stderr
error: Expected ,, got <eof>
 --> $DIR/tests/test262-parser/fail/888d17b2ef3b2afc.js:1:9
  |
1 | 1 + { t:t 
  |         ^

